Bug 90766 - Table - keep with paragraph setting is broken
Summary: Table - keep with paragraph setting is broken
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.5.0.0.alpha0+ Master
Hardware: Other Linux (All)
: medium major
Assignee: Not Assigned
URL:
Whiteboard: target:5.0.0
Keywords: bisected, regression
Depends on:
Blocks:
 
Reported: 2015-04-21 06:51 UTC by Justin L
Modified: 2015-07-03 10:22 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
document I used to discover the reported bug (12.46 KB, application/vnd.oasis.opendocument.text-template)
2015-04-21 06:51 UTC, Justin L
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Justin L 2015-04-21 06:51:22 UTC
Created attachment 114980 [details]
document I used to discover the reported bug

Enabling "table → table properties → Text Flow → keep with next paragraph"  DOES enable the setting. However, going back into the table properties shows it as "unchecked".  This prevents you from disabling the setting since your only option is to turn on a setting that is already effectively on.  

	Bibisecting and further compiling showed this regression to be caused by Zolnai Tamás <zolnaitamas2000@gmail.com>	2015-03-16 23:10:01 (GMT)
commit f7424ed710e54bb2437a28380b03ed7c26290edc
SfxTabDialog: avoid changing const input parameter

I tested with Linux only, so marking that way, but assuming this affects all.  Marking as major since the code change was affecting tabs in general, not "keep with next paragraph" specifically so likely there are many more side effects.
Comment 1 Commit Notification 2015-04-22 00:49:48 UTC
Zolnai Tamás committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=badec7478035008f514e0976a94438fe2e32dc40

tdf#90766: Table - keep with paragraph setting is broken

It will be available in 5.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.