tdf#90766: Table - keep with paragraph setting is broken

Modify input set before dialog is created

Change-Id: I66d9ed5c07fcdfe4841d071be9b5252aa925b987